pushed basic portfolio to github pages

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
     <section class="container">
 
-      <div class="main">
+      <div class="mainContact">
 
         <h2>Contact Me!</h2>
 
@@ -49,6 +49,8 @@
       <aside class="sidebar">
         <h3>Get in touch</h3>
         <a href="https://github.com/misterfoxy"><img id="logoLink" src="assets/images/github.jpg" alt="github" /></a>
+        <a href="https://linkedin.com/in/michaelscottfox"><img id="logoLink" src="assets/images/linkedin.png" alt="linkedIn" /></a>
+        <a href="https://stackoverflow.com"><img id="logoLink" src="assets/images/stack.png" alt="stackOverflow" /></a>
       </aside>
 
     </section>
