--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
         <img id='profilePic' src="assets/images/profile.jpg" alt="me">
         <br>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Hello! My name is Michael Fox, and I'm an aspiring Web Developer. I was born
+        in Anaheim, California, and currently reside in Tempe, Arizona. I have been
+        studying web technologies for two years, and currently am enrolled in the
+        University of Arizona coding bootcamp.
+        </p>
+        <p>
+          Some of my hobbies include Krav Maga, Dachshund Racing, and reading
+          Kurt Vonnegut. I'm currently employed as a bartender -- I make a mean
+          Margarita! If you want to get in contact with me, head on over to the
+          contact link, and I'll be sure to get back to you promptly.
         </p>
 
       </div>
@@ -43,6 +51,8 @@
       <aside class="sidebar">
         <h3>Get in touch</h3>
         <a href="https://github.com/misterfoxy"><img id="logoLink" src="assets/images/github.jpg" alt="github" /></a>
+        <a href="https://linkedin.com/in/michaelscottfox"><img id="logoLink" src="assets/images/linkedin.png" alt="linkedIn" /></a>
+        <a href="https://stackoverflow.com"><img id="logoLink" src="assets/images/stack.png" alt="stackOverflow" /></a>
       </aside>
 
     </section>
