--- a/portfolio.html
+++ b/portfolio.html
@@ -29,20 +29,22 @@
 
     <section class="container">
 
-      <div class="main">
+      <div class="mainPortfolio">
         <h2>Portfolio</h2>
-        <img id='profilePic' src="assets/images/profile.jpg" alt="me">
-        <br>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
+        <img id='loremPixel' src="https://lorempixel.com/400/150" alt="place">
+        <p>Doodle Jump Clone</p>
+        <img id='loremPixel' src="https://lorempixel.com/399/150" alt="place">
+        <p>Random Playlist Generator</p>
+        <img id='loremPixel' src="https://lorempixel.com/401/150" alt="place">
+        <p>Basic Calculator</p>
 
       </div>
 
       <aside class="sidebar">
         <h3>Get in touch</h3>
         <a href="https://github.com/misterfoxy"><img id="logoLink" src="assets/images/github.jpg" alt="github" /></a>
+        <a href="https://linkedin.com/in/michaelscottfox"><img id="logoLink" src="assets/images/linkedin.png" alt="linkedIn" /></a>
+        <a href="https://stackoverflow.com"><img id="logoLink" src="assets/images/stack.png" alt="stackOverflow" /></a>
       </aside>
 
     </section>
