--- a/contact.html
+++ b/contact.html
@@ -1,64 +1,85 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Fox Portfolio</title>
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!doctype html>
+<html lang="en-us">
 
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Contact | Michael Scott Fox</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-  <body>
+<body>
 
-    <nav class="header">
+  <nav class="navbar navbar-default" id="masthead">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <a class="navbar-brand" id="logo">Michael Fox</a>
+        </div>
 
-      <div class="name">
-        <h1>Michael Fox</h1>
+        <div class="col-md-6">
+            <!-- spacer -->
+        </div>
+
+        <div class="col-md-3">
+          <ul class="nav navbar-nav" id ="out">
+            <li ><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
       </div>
+    </div>
+  </nav>
 
 
+  <div class="container container-fluid">
+    <div class="row">
+      <div class="col-md-8" id="main-section">
+        <h1>Contact</h1>
 
-      <div class="out">
-        <ul id="links">
-          <li><a href="index.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-
-    </nav>
-
-    <section class="container">
-
-      <div class="mainContact">
-
-        <h2>Contact Me!</h2>
-
-        <form class="contactMe">
-          Name: <br>
-          <input type="text" name="Enter your name here"> <br>
-          Email: <br>
-          <input type="text" name="example@example.com"> <br>
-          Message: <br>
-          <input type="text" style="height:200px;width:565px;" name="Write here!"> <br>
-          <button type="button" name="button">Submit</button>
+        <form id="contact-form">
+          <ul>
+            <li>
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            </li>
+            <li>
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+            </li>
+            <li>
+              <label for="message">Message</label>
+              <textarea id="message" name="message" required="required"></textarea>
+            </li>
+          </ul>
+          <input type="submit" value="Send">
         </form>
 
       </div>
 
-      <aside class="sidebar">
-        <h3>Get in touch</h3>
-        <a href="https://github.com/misterfoxy"><img id="logoLink" src="assets/images/github.jpg" alt="github" /></a>
-        <a href="https://linkedin.com/in/michaelscottfox"><img id="logoLink" src="assets/images/linkedin.png" alt="linkedIn" /></a>
-        <a href="https://stackoverflow.com"><img id="logoLink" src="assets/images/stack.png" alt="stackOverflow" /></a>
-      </aside>
+      <div class="col-md-4">
+        <div class="panel panel-default" id="sidebar">
+          <div class="panel-heading"><p>Connect with Me</p></div>
+            <div class="panel-body">
+              <a href="https://github.com/misterfoxy"><img src="assets/images/github.jpg" class="social" alt="GitHub" /></a>
+              <a href="https://linkedin.com/in/michaelscottfox"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
+              <a href="https://stackoverflow.com"><img src="assets/images/stack.png" class="social" alt="Stack Overflow" /></a>
+          </div>
+        </div>
 
-    </section>
+      </div>
 
-    <footer>
-      <p id="footText">Copyright 2017 Michael Fox</p>
-    </footer>
+    </div>
 
-  </body>
+  </div>
+
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Michael Scott Fox
+    </div>
+  </footer>
+</body>
 
 </html>
