--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <div class="work">
           <img src="assets/images/place1.jpg" alt="hangman">
 
-          <a href="https://misterfoxy.github.io/gifSearcher"><h3>Gif Search</h3></a>
+          <a href="https://misterfoxy.github.io/gifSearch"><h3>Gif Search</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/place2.jpg" alt="RPG Game">
