--- a/portfolio.html
+++ b/portfolio.html
@@ -46,22 +46,17 @@
         <div class="work">
           <img src="assets/images/place2.jpg" alt="RPG Game">
 
-          <h3>Simon Says</h3>
+          <a href="https://misterfoxy.github.io/week-4-game"><h3>jQuery Game</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/place3.jpg" alt="Trivia Game">
 
-          <h3>Basic Calculator</h3>
+          <a href="https://misterfoxy.github.io/calculator"><h3>Basic Calculator</h3></a>
         </div>
         <div class="work">
           <img src="assets/images/place4.jpg" alt="Rutgers Info Widget">
 
-          <h3>Stock Market Tracker</h3>
-        </div>
-        <div class="work">
-          <img src="assets/images/plae5.jpg" alt="Rock Paper Scissors">
-
-          <h3>Spotify Clone</h3>
+          <a href="https://misterfoxy.github.io/TriviaGame"><h3>Trivia Game</h3></a>
         </div>
       </div>
 
