--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profile.jpg" alt="">
+        <img class="img-fluid" src="img/profile.png" alt="me">
         <div class="intro-text">
           <span class="name">Michael Scott Fox</span>
           <hr class="star-light">
