--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                   <h2>PinPoint</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/cabin.png" alt="">
-                  <p><a target="_blank" href="https://misterfoxy.github.io/project-1">Data Mapping Application utilizing AJAX, React.js, SASS, and Google Maps</a></p>
+                  <p><a target="_blank" href="https://misterfoxy.github.io/project-1">Data Mapping Application utilizing AJAX, BootStrap, jQuery, CSS3, and Google Maps</a></p>
 
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
@@ -354,10 +354,10 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>RubyChat</h2>
+                  <h2>RubyTask</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/submarine.png" alt="">
-                  <a href="#"><p>Chat application using Rails 5</p></a>
+                  <a href="#"><p>(Still in Production) Task Managing application using Rails 5</p></a>
 
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
