more stylistic changes

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p>I am a freelance web developer from Anaheim, California, who's strengths include Front-End Development and UI Design. My favorite technologies to work with are React, Express, Node, MySQL, MongoDB, jQuery, and on occassion, Ruby/Rails and Python. Below there are a few examples of projects I've developed in my free time</p>
+            <p>I am a Web Developer from Anaheim, California, who's strengths include Front-End Development and UI Design. My favorite technologies to work with are React, Express, Node, MySQL, MongoDB, jQuery, and on occassion, Ruby/Rails and Python. Above there are a few examples of projects I've developed in my free time.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p>I currently am a student at Arizona State University, finishing my B.S in Economics online. I work for Kalve, making custom apparel as a graphic designer. Most of my work involves PhotoShop and Illustrator, with frequent time spent around the screen press. At nights, I manage and bartend in Old Town Scottsdale at Diego Pops, the best tequila bar in town!</p>
+            <p>I have a Certificate from the University of Arizona for Web Development, and am curretly an undergraduate student at Arizona State University. I work for Kalve, making custom apparel as a graphic designer. Most of my work involves PhotoShop and Illustrator, with frequent time spent around the screen press.</p>
           </div>
         </div>
       </div>
@@ -168,8 +168,8 @@
               <ul class="list-inline">
 
                 <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-envelope"></i>
+                  <a class="btn-social btn-outline" href="https://github.com/misterfoxy">
+                    <i class="fa fa-fw fa-github"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
